se modifico el mappeo